--- a/yaml/app-cronjob.yaml
+++ b/yaml/app-cronjob.yaml
@@ -1,27 +1,16 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: template-pod
-  namespace: template-namespace
-spec:
-  containers:
-    - name: demo-container
-      image: demo:latest
----
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: detailed-cronjob
-  namespace: template-namespace
+  name: template-cronjob
+  namespace: template
 spec:
-  schedule: "0 1 * * *"
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-          - name: cronjob-container
+          - name: demo-container
             image: demo:latest
           restartPolicy: OnFailure
-
 
